--- a/portal/static/css/portal.css
+++ b/portal/static/css/portal.css
@@ -129,10 +129,13 @@ a.btn {
   display: inline-block;
 }
 .button--LR.data-show,
-#profileConsentList .button--LR[data-show] {
+#profileConsentList .button--LR[data-show='true'] {
     opacity: 1;
 }
-
+.button--LR.data-show,
+#profileConsentList .button--LR[data-show='false'] {
+    opacity: 0;
+}
 ::-webkit-input-placeholder { /* WebKit, Blink, Edge */
     color:    #999;
 }
