--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -167,8 +167,11 @@ a.btn {
   display: inline-block;
 }
 .button--LR.data-show,
-#profileConsentList .button--LR[data-show] {
+#profileConsentList .button--LR[data-show = 'true'] {
     opacity: 1;
+}
+#profileConsentList .button--LR[data-show = 'false'] {
+    opacity: 0;
 }
 #profileConsentList {
   .button--LR,
