--- a/portal/templates/profile.html
+++ b/portal/templates/profile.html
@@ -25,7 +25,7 @@
               {%- if user and user.username -%}
                 {%- if providerPerspective == 'true' -%}
                     <h4 class="tnth-headline">{{ _("Patient Profile") }} <span class="profile-item-title">&nbsp;#{{ user.id}} - {{ user.username }}</span></h4>
-                {%- elif current_user.has_role('admin') -%}
+                {%- elif current_user.id != user.id -%}
                     <h4 class="tnth-headline">{{ _("Profile for") }} {{ user.username }}</h4>
                 {%- else -%}
                      <h4 class="tnth-headline">{{ _("My TrueNTH Profile") }}</h4>
