--- a/portal/templates/initial_queries_macros.html
+++ b/portal/templates/initial_queries_macros.html
@@ -241,10 +241,11 @@
 
               if (errorMsg == "") {
                   $("#biopsyDateError").text("");
-                  setTimeout('$("#biopsy_yes").trigger("click");', 500);
+                  $("#biopsy_yes").trigger("click");
                   return true;
               } else {
                   $("#biopsyDateError").text(errorMsg);
+                  $("#biopsyDate").datepicker("hide");
                   return false;
               };
            } else {
@@ -265,6 +266,7 @@
           	$(this).on("click", function() {
           		if ($(this).val() == "true") {
           			$("#biopsyDateContainer").show();
+                $("#biopsyDate").focus();
           		} else {
           			$("#biopsyDate").val("");
                 $("#biopsyDateError").text("");
