--- a/portal/static/less/eproms.less
+++ b/portal/static/less/eproms.less
@@ -1480,12 +1480,12 @@ input.clinic {
 }
 div.noOrg-container {
   input[type="radio"] {
-  font-size:0.95em;
   top: 2px;
   }
   span {
   margin-left:5px;
   position: relative;
+  left: 2px;
   top: 1px;
   }
 }
