--- a/portal/templates/initial_queries.html
+++ b/portal/templates/initial_queries.html
@@ -351,7 +351,13 @@ function getNext() {
             var o = $("#userOrgs input[name='organization']:checked");
             var parentOrg = OT.getElementParentOrg(o);
             if (hasValue(parentOrg)) {
-              $("#" + parentOrg + "_consentModal").modal("show");
+              var cModal = $("#" + parentOrg + "_consentModal");
+              if (cModal.length > 0) cModal.modal("show");
+              else {
+                var dModal = $("#" + parentOrg + "_defaultConsentModal");
+                if (dModal.length > 0) dModal.modal("show");
+                else if (!found) continueToFinish();
+              }
             } else {
               if (!found) continueToFinish();
             };
