--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -507,6 +507,7 @@
                </div>
            </div>
            <div id="userOrgsInfo" class="text-muted">No clinic found in selected clinic.</div>
+           <div id="defaultConsentContainer"></div>
            {% if consent_agreements %}{{consent(person, consent_agreements, current_user, True)}}{% endif %}
         </div>
     </div>
@@ -780,7 +781,10 @@
                             setTimeout("tnthAjax.setConsent({{person.id}}, " + JSON.stringify(params) + ");", 10);
                             setTimeout("tnthAjax.removeObsoleteConsent();", 100);
                         }
-                        else tnthAjax.deleteConsent({{person.id}}, {"org":orgId});
+                        else {
+                            tnthAjax.deleteConsent({{person.id}}, {"org":orgId});
+                            setTimeout("tnthAjax.removeObsoleteConsent();", 100);
+                        };
                         if (typeof reloadConsentList != "undefined") setTimeout("reloadConsentList();", 500);
                         setTimeout('$(".modal").modal("hide");', 250);
                     });
