--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -1123,7 +1123,7 @@
 
                 } else {
                     $("#userSessionListTable").hide();
-                    $("#userSessionsListContainer").prepend("<span class='text-muted'>No Questionnaire Data Found.</span>");
+                    $("#userSessionsListContainer").prepend("<span class='text-muted'>No questionnaire data found.</span>");
                 };
 
             }).fail(function() {
@@ -1379,12 +1379,12 @@
     <div class="row">
             <div class="col-md-12 col-xs-12">
                 <div class="profile-item-container">
-                    <h4 id="interventionReportsLoc" class="profile-item-title index-item">{{ _("Reports") }}</h4>
+                    <h4 id="interventionReportsLoc" class="profile-item-title index-item">{{ _("Intervention Reports") }}</h4>
                     <div>
                         {%- if person and person.staff_html() -%}
                             {{person.staff_html() | safe}}
                         {%- else -%}
-                            <div class="text-muted">{{ _("No Reports Available") }}</div>
+                            <div class="text-muted">{{ _("No reports available.") }}</div>
                         {%- endif -%}
                     </div>
                 </div>
