--- a/portal/templates/gil/contact.html
+++ b/portal/templates/gil/contact.html
@@ -69,6 +69,7 @@
 {% block document_ready %}
   <script>
       $(document).ready(function(){
+        $("header").addClass("header--white");
         $("#first-name, #last-name").each(function() {
             $(this).on("blur", function() {
                 var name = $("#first-name").val();
