--- a/portal/templates/profile_macros.html
+++ b/portal/templates/profile_macros.html
@@ -279,6 +279,7 @@
                 url: '/api/user/' + $("#_userId").val() + '/access_url',
                 contentType: "application/json; charset=utf-8",
                 dataType: 'json',
+                cache: false,
                 async: false
             }).done(function(data) {
                 url = data['access_url'];
@@ -313,20 +314,29 @@
                 var subject = '';
                 var body = '';
                 var return_url = '';
+                var parentName = "";
+                var selectedOrg = $("#userOrgs input[name='organization']:checked");
                 var clinicName = (function() {
-                    var orgs = $("#userOrgs input[name='organization']:checked").not('[parent_org]');
-                    var parentName = "";
-                    if (orgs.length > 0 ) {
-                        orgs.each(function() {
-                            if (!parentName) {
-                                parentName = $(this).attr("data-parent-name");
-                                if (!hasValue(parentName)) parentName = $(this).closest(".org-container[data-parent-id]").attr("data-parent-name");
-                                //console.log("pn: " + parentName)
-                            };
-                        });
-                    };
-                    var cn = parentName ? parentName: "your clinic";
+                    var cn = "";
+                    if (selectedOrg.length > 0 ) cn = selectedOrg.closest("label").text();
+                    if (!hasValue(cn)) cn = "your clinic";
                     return cn;
+                })(); 
+                var parentName = (function() {
+                    var pName = "";
+                    if (selectedOrg.length > 0) {
+                        pName = $(selectedOrg).attr("data-parent-name");
+                        if (!hasValue(pName)) pName = $(selectedOrg).closest(".org-container[data-parent-id]").attr("data-parent-name");
+                    };
+                    return pName;
+                })();
+                var greeting = (function() {
+                    var fname = $("#firstname").val();
+                    var lname = $("#lastname").val();
+                    var txt = "Hello";
+                    if (hasValue(fname)) txt += " " + fname;
+                    if (hasValue(lname)) txt += " " + lname;
+                    return txt;
                 })();
                 if (selectedOption.val() == 'invite'){
                     return_url = getAccessUrl();
@@ -336,6 +346,8 @@
                            replace once the variable is available. -#}
                         body = '{{ app_text('profileSendEmail invite email_body',
                                 'url_placeholder') | safe }}'.replace(/\(clinic name\)/g, clinicName);
+                        body = body.replace(/\(greeting\)/g, greeting);
+                        body = body.replace(/\(parent org\)/g, parentName);
                         body = body.replace(/url_placeholder/g, return_url);
                         subject = '{{ app_text('profileSendEmail invite email_subject') }}'.replace(/\(clinic name\)/g, clinicName);
                     };
@@ -348,6 +360,7 @@
                     $.ajax ({
                         type: 'POST',
                         url: '/invite',
+                        cache: false,
                         contentType: 'application/x-www-form-urlencoded; charset=UTF-8',
                         data: {'subject': subject, 'recipients': email, 'body': body}
                     }).done(function(data) {
